--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --offset: 2rem;
   --bg: light-dark(white, #000);
   --text: light-dark(#212121, #fafafa);
-  --accent: light-dark(rgb(35, 137, 239), rgb(133, 194, 255));
+  --accent: light-dark(black, white);
   --subtle: light-dark(white, rgb(14 14 14));
   --font: GoogleSansCode, monospace
 }
