--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -91,7 +91,7 @@
     border: 1px solid;
     border-color: light-dark(#ddd, #333);
     /* border-color: light-dark(rgba(30, 143, 255, 0.85), rgba(30, 143, 255, 0.31)); */
-
+    cursor: pointer;
     border-radius: 14px;
     max-width: fit-content;
     justify-content: space-between;
@@ -112,6 +112,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
+    word-break: break-all;
 
     h3 {
         font-weight: bold;
@@ -153,6 +154,8 @@ span.completed {
     font-size: 14px;
     opacity: 0.75;
     margin-bottom: 8px;
+    word-break: break-all;
+
 }
 
 .event-date {
