--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url(./styles/fonts.css);
 @import url(./styles/form.css);
 @import url(./styles/home.css);
+@import url(./styles/settings.css);
 
 :root {
   color-scheme: light dark;
@@ -59,19 +60,4 @@ main {
   width: 100%;
   max-width: 1250px;
   padding-bottom: 5.5rem;
-}
-
-footer {
-  position: fixed;
-  bottom: -2rem;
-  border-radius: 10dvw;
-  left: 50%;
-  max-width: 1250px;
-  padding: 6px;
-  transform: translate(-50%, 0);
-  width: calc(100% - 2rem);
-  background: light-dark(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5));
-  backdrop-filter: blur(5px);
-  border: 1px solid rgba(128, 128, 128, 0.125);
-  margin-bottom: 3rem;
 }
