--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -83,7 +83,7 @@ input {
 
 .input-label {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding-inline-start: 2px;
     opacity: 0.9;
 
@@ -96,7 +96,7 @@ input {
             position: absolute;
             top: 0px;
             right: -8px;
-            font-size: 11px;
+            font-size: 0.6875rem;
             color: light-dark(red, rgb(250, 93, 93));
 
         }
