font-size relative units

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -498,6 +498,8 @@ body:has(div.event-modal) {
     padding: 4px;
     height: fit-content;
     border-radius: 14px;
+    z-index: 11;
+    background: var(--bg);
 
     ul {
         list-style: none;
