--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 1rem;
+    gap: 1.5rem;
     margin-block: 1rem 0.5rem;
     width: 100%;
 
@@ -61,6 +61,7 @@
     border-radius: 14px;
     cursor: pointer;
     height: 40px;
+    min-width: fit-content;
 
     &:hover,
     &:active {
