--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -17,14 +17,17 @@
 
 .settingsPage {
     opacity: 1;
+    width: 100%;
 }
 
 .appearanceSettings {
     opacity: 1;
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: start;
-    gap: 1.5rem;
+    gap: 2.5rem;
     margin-block: 1rem 0.5rem;
     width: 100%;
 
@@ -76,6 +79,8 @@
     justify-content: start;
     align-items: start;
     flex-direction: column;
+    margin-top: -1rem;
+    max-width: 50ch;
 
     span {
         opacity: 0.75;
