--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -20,7 +20,8 @@
     width: 100%;
 }
 
-.appearanceSettings {
+.appearanceSettings,
+.shareSettings {
     opacity: 1;
     display: flex;
     width: 100%;
@@ -141,4 +142,37 @@ button.reset-app {
         outline: 2px solid rgba(30, 143, 255, 0.25);
     }
 
+}
+
+.shareSettings {
+    display: flex;
+    width: min(100%, 400px);
+
+    button {
+        flex: 1;
+        background: var(--subtle);
+        border: 1px solid rgb(128 128 128 /0.25);
+        color: var(--text);
+        cursor: pointer;
+        font-size: 0.75rem;
+        transition: all 75ms;
+        padding: 0.75rem 0.75rem;
+        border-radius: 14px;
+
+        &:hover {
+            opacity: 0.75;
+        }
+    }
+}
+
+.importSettings,
+.exportSettings {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    background: none !important;
+    border: none !important;
+    font-family: var(--font);
+    font-size: 0.625rem !important;
+    text-decoration: underline !important;
 }
