--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -117,6 +117,7 @@ button.reset-app {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 75ms;
 
     &:hover {
         scale: 1.025;
