--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,19 +1,3 @@
-@media (prefers-color-scheme: dark) {
-
-
-    .arrowImage {
-        filter: invert(0) brightness(20) !important;
-    }
-}
-
-@media (prefers-color-scheme: light) {
-
-
-    .arrowImage {
-        filter: invert(0) brightness(20) !important;
-    }
-}
-
 @media (max-width:40em) {
     .event-card {
         min-width: 100% !important;
@@ -256,6 +240,8 @@ span.completed {
 .zero-events-wrapper {
     margin-top: 3rem;
     margin-inline: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .zero-events-image-container {
@@ -303,7 +289,6 @@ span.completed {
     .arrowImage {
         width: 100px;
         height: 100px;
-        filter: invert(0) saturate(0) contrast(10);
         animation: opacity 1500ms infinite ease-in-out;
     }
 }
