--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -29,7 +29,7 @@
     justify-content: space-between;
     align-items: start;
     gap: 1.5rem;
-    margin-block: 1rem 0.5rem;
+    margin-block: 1rem 1rem;
     width: 100%;
 
     label {
@@ -42,108 +42,34 @@
             min-width: 78px;
         }
     }
-
-    div {
-        display: flex;
-        gap: 1rem;
-
-        span {
-            font-size: 0.72rem;
-        }
-
-    }
 }
 
-.font-block {
-    font-size: 0.67rem;
-    background: light-dark(rgb(229, 229, 229), rgb(19, 19, 19));
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.5rem;
-    border-radius: 14px;
-    cursor: pointer;
-    height: 40px;
-    min-width: fit-content;
-
-    &:hover,
-    &:active {
-        border: 1px solid rgb(128 128 128 /0.25);
-    }
+.appearanceSettings {
+    flex-direction: column;
+    width: 100%;
 }
 
-.sample-text {
-    position: relative;
-    font-size: 0.78rem;
+.settingsItem {
     display: flex;
     justify-content: start;
     align-items: start;
+    width: 100%;
     flex-direction: column;
-    margin-top: -1rem;
-    max-width: 50ch;
+    gap: 0.5rem;
 
     span {
-        opacity: 0.75;
+        font-size: 0.85rem;
+        display: flex;
+        align-items: center;
+        gap: 0.45rem;
 
-    }
-
-    padding-left: 8px;
-    font-family: var(--font);
-
-    &::before {
-        position: absolute;
-        content: '';
-        height: 100%;
-        width: 2px;
-        left: -4px;
-        background: gray;
-        opacity: 0.75;
+        svg {
+            width: 0.85rem;
+            height: 0.85rem;
+        }
     }
 }
 
-button.reset-app {
-    margin-top: 2rem;
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    font-size: 0.78rem;
-    font-family: var(--font);
-    border-radius: 10dvw;
-    border: none;
-    color: var(--bg);
-    background: var(--subtle);
-    font-weight: bold;
-    background: light-dark(red, rgb(255, 82, 82));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 75ms;
-
-    &:hover {
-        scale: 1.025;
-    }
-}
-
-#confirm-deletion {
-    min-height: 40px;
-    border: 1.5px solid rgb(128 128 128 /0.25);
-    border-radius: 14px;
-    flex: 1;
-    padding: 0.5rem 0.75rem;
-    outline: none;
-    background: none;
-    font-size: 1rem;
-    font-family: var(--font);
-    margin-top: 0.5rem;
-    width: min(100%, 400px);
-
-    &:active,
-    &:focus {
-        border: 1.5px solid rgba(30, 143, 255, 0.696);
-        outline: 2px solid rgba(30, 143, 255, 0.25);
-    }
-
-}
 
 .shareSettings {
     display: flex;
@@ -164,17 +90,4 @@ button.reset-app {
             opacity: 0.75;
         }
     }
-}
-
-.importSettings,
-.exportSettings {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    width: fit-content;
-    background: none !important;
-    border: none !important;
-    font-family: var(--font);
-    font-size: max(11px, 0.5rem) !important;
-    text-decoration: underline !important;
 }
